@@ -15,6 +15,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9770: curses.ascii predicates now work correctly with negative
+  integers.
+
 - Issue #28427: old keys should not remove new values from
   WeakValueDictionary when collecting from another thread.
 
